discussion/kv_engine/126024/126024_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38673: Privilege based visibility for get_scope/collection id

Still needs tweaking and cleaning (some cerr stuff)

Tests to check returned uid...

Change-Id: I4a20c791284a12d66741254da006541f923362e7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-04-17 21:13:27.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-17 21:29:59.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27596/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\dcp\active_stream.cc(2016): error C2065: "producer": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27596/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1770/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/collections.h:20:2: error: "Please include memcached/engine.h instead" [clang-diagnostic-error]
#error "Please include memcached/engine.h instead"
 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/protocol_binary.h:2211:5: warning: single-argument constructors must be marked explicit to avoid unintentional implicit conversions [google-explicit-constructor]
    GetCollectionIDPayload(uint64_t manifestId)
    ^
    explicit 
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/protocol_binary.h:2238:5: warning: single-argument constructors must be marked explicit to avoid unintentional implicit conversions [google-explicit-constructor]
    GetScopeIDPayload(uint64_t manifestId) : manifestId(htonll(manifestId)) {
    ^
    explicit 

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1770/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/collections.h:20:2:
error: "Please include memcached/engine.h instead" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1770/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23597/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: use of undeclared identifier "producer"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23597/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3184/ : FAILURE

Compile error at [2020-04-17T21:18:50.572Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: ?producer? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3184/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3200/ : FAILURE

Compile error at [2020-04-17T21:22:22.092Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: ?producer? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3200/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11052/ : FAILURE

Compile error at [2020-04-17T21:25:05.753Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: ?producer? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11052/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2245/ : FAILURE

Compile error at [2020-04-17T21:17:07.014Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: use of undeclared identifier "producer"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2245/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3262/ : FAILURE

Compile error at [2020-04-17T21:21:05.895Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: ?producer? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3262/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/289/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
